--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,6 +30,8 @@
         ]
     },
     "globals": {
-      "Handlebars": false
+      "Handlebars": false,
+      "dataSource": true,
+      "utils": true
     }
 }
